# il2cpp-sys-rs

./: .gitignore  Cargo.toml  build.rs
include/api/: diffs.diff
include/headers/: 6000.2.10f1.h  6000.3.0a3.h  6000.3.5f2.h  6000.4.0b6.h  6000.5.0a3.h  6000.5.0a5.h  6000.5.0a6.h  diffs.diff  extract.py
src/: lib.rs
